fixing filter button squishing

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -63,7 +63,7 @@
           display: inline;
           cursor: pointer;
           margin: 0;
-          min-width: 116px;
+          min-width: 134px;
           padding: {
             top: 0px;
             left: 0px;
